--- a/myhockeyapp/views/game_list.jade
+++ b/myhockeyapp/views/game_list.jade
@@ -17,7 +17,7 @@ block content
     div.container-fluid
         div.row
             div.col-md-12
-                button.btn.btn-default(data-toggle="modal" data-target="#scheduleGameModal") Schedule Game
+                button.btn.btn-default(data-toggle="modal" data-target="#scheduleGameModal") Schedule a New Game
         div.row
             div.col-md-12.table-responsive
                 table.table
