--- a/myhockeyapp/views/game_list.jade
+++ b/myhockeyapp/views/game_list.jade
@@ -4,7 +4,8 @@ block links
     link(href='/stylesheets/c3.css' rel='stylesheet' type='text/css')
     link(href='/stylesheets/style.css' rel='stylesheet' type='text/css')
     link(href="/stylesheets/bootstrap.min.css" rel="stylesheet" type="text/css")
-    link(href="/stylesheets/bootstrap-theme.min.css" rel="stylesheet" type="text/css")
+    link(href="/stylesheets/sb-admin.css" rel="stylesheet" type="text/css")        
+    link(href="/stylesheets/font-awesome.min.css" rel="stylesheet" type="text/css")   
             
 block scripts    
     script(src='/javascripts/d3.min.js' charset='utf-8' type='text/javascript')
@@ -13,11 +14,22 @@ block scripts
     script(src='/javascripts/bootstrap.min.js' type='text/javascript')
     
 block content
-    h1= title
     div.container-fluid
         div.row
             div.col-md-12
-                button.btn.btn-default(data-toggle="modal" data-target="#scheduleGameModal") Schedule a New Game
+                h1.page-header #{title}   
+                ol.breadcrumb
+                    li
+                        i.fa.fa-dashboard
+                        a(href="/") 
+                            | Hockey Stats
+                    li
+                        i.fa.fa-list-ul
+                        a(href="/gameentry") 
+                            | Games                 
+        div.row
+            div.col-md-12
+                button.btn.btn-primary(data-toggle="modal" data-target="#scheduleGameModal") Schedule a New Game
         div.row
             div.col-md-12.table-responsive
                 table.table
