--- a/myhockeyapp/views/layout.jade
+++ b/myhockeyapp/views/layout.jade
@@ -1,37 +1,82 @@
 doctype html
-html
+html(lang="en")
   head
     title= title
+    meta(charset="utf-8")
     meta(name="viewport" content="width=device-width, initial-scale=1")
     
   block links
     link(href="/stylesheets/style.css" rel="stylesheet" type="text/css")
     link(href="/stylesheets/bootstrap.min.css" rel="stylesheet" type="text/css")
-    link(href="/stylesheets/bootstrap-theme.min.css" rel="stylesheet" type="text/css")
-    
+    link(href="/stylesheets/sb-admin.css" rel="stylesheet" type="text/css")
+    link(href="/stylesheets/font-awesome.min.css" rel="stylesheet" type="text/css")  
+        
   block scripts
     script(src='/javascripts/bootstrap.min.js' type='text/javascript')
     script(src='/javascripts/jquery-2.2.1.min.js' type='text/javascript')
     
   body
-    nav.navbar.navbar-inverse.navbar-fixed-up
-      div.container-fluid
+    div#wrapper
+      nav.navbar.navbar-inverse.navbar-fixed-top(role="navigation")
         div.navbar-header
           button.navbar-toggle.collapsed(type="button" data-toggle="collapse" data-target="#navbar-collapse-1")
             span.sr-only Toggle navigation
             span.icon-bar
             span.icon-bar
             span.icon-bar
-          a.navbar-brand(href="#") Hockey Stats
-        div#navbar-collapse-1.collapse.navbar-collapse
-          ul.nav.navbar-nav.navbar-left
+          a.navbar-brand(href="/") 
+            | Hockey Stats
+        ul.nav.navbar-right.top-nav
+          li.dropdown
+            a.dropdown-toggle(href="#", data-toggle="dropdown")
+              i.fa.fa-envelope 
+                b.caret 
+            ul.dropdown-menu.message-dropdown
+              li.message-preview  
+              li.message-preview  
+              li.message-preview  
+              li.message-footer  
+          li.dropdown
+            a.dropdown-toggle(href="#", data-toggle="dropdown")
+              i.fa.fa-bell 
+                b.caret 
+            ul.dropdown-menu.alert-dropdown
+              li  
+              li
+              li  
+              li  
+          li.dropdown
+            a.dropdown-toggle(href="#", data-toggle="dropdown")
+              i.fa.fa-user 
+                | Mervin Yan
+                b.caret 
+            ul.dropdown-menu
+              li
+                a(href="#")
+                  i.fa.fa-fw.fa-user Profile  
+              li
+                a(href="#")
+                  i.fa.fa-fw.fa-envelope Inbox  
+              li
+                a(href="#")
+                  i.fa.fa-fw.fa-gear Settings  
+              li.divider  
+              li
+                a(href="#")
+                  i.fa.fa-fw.fa-power-off Log Out                              
+        div#navbar-collapse-1.collapse.navbar-collapse.navbar-ex1-collapse
+          ul.nav.navbar-nav.side-nav
             li
-              a(href="/") Home
+              a(href="/teamstats" ) 
+                i.fa.fa-fw.fa-users 
+                | Team Stats
             li
-              a(href="/teamstats" ) Team Stats
+              a(href="/playerstats")
+                i.fa.fa-fw.fa-user 
+                | Player Stats
             li
-              a(href="/playerstats") Player Stats
-            li
-              a(href="/gameentry") Game Entry
-
-    block content
+              a(href="/gameentry") 
+                i.fa.fa-fw.fa-edit 
+                | Game Entry                
+      div#page-wrapper
+        block content
